# boid

./: .copier-answers.yml  LICENSE  README.md  pyproject.toml
notebooks/: boid_notebook.ipynb
src/boid/: __init__.py  _boid.py
src/boid/_tests/: test__boid.py
